match monochrome colors from design files

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,8 +14,9 @@ $brand-primary: #0d395f;
 $brand-secondary: #0d395f;
 
 $white: #fff;
-$black: #000;
-$gray: #666;
+$black: #202020;
+$gray: #767676;
+$gray-light: #dedede;
 
 $font-family-sans-serif: sans-serif;
 $font-family-serif: serif;
