add more brand colors from design files

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,7 +11,10 @@ $breakpoints: (
 );
 
 $brand-primary: #0d395f;
-$brand-secondary: #0d395f;
+$brand-primary-dark: #022543;
+$brand-secondary: #97bbd5;
+$brand-secondary-dark: #174872;
+$brand-tertiary: #0ac3a6;
 
 $white: #fff;
 $black: #202020;
