--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $breakpoints: (
   xl: $screen-xl,
 );
 
+// TODO: rename and use color names e.g. brand-green, brand-blue?
 $brand-primary: #0d395f;
 $brand-primary-dark: #022543;
 $brand-secondary: #97bbd5;
