define brand fonts for font family variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -22,8 +22,8 @@ $black: #202020;
 $gray: #767676;
 $gray-light: #dedede;
 
-$font-family-sans-serif: sans-serif;
-$font-family-serif: serif;
+$font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', verdana, sans-serif;
+$font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
 
 $base-font-size: 16px;
 $base-line-height: 1.5;
