add base config variables

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -26,4 +26,6 @@ $font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', verdana, sans-serif;
 $font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
 
 $base-font-size: 16px;
+$base-text-color: $black;
 $base-line-height: 1.5;
+$base-font-family: $font-family-sans-serif;
