--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,3 +1,11 @@
+* {
+  &,
+  &:before,
+  &:after {
+    box-sizing: border-box;
+  }
+}
+
 body {
   font-family: $base-font-family;
   line-height: $base-line-height;
