--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -1,3 +1,51 @@
 <footer class="site-footer">
-footer
+  <div class="container">
+
+    <div class="site-footer__content">
+
+      {% include 'partials/action-callout.twig' with {
+        preheader: 'Help us help the world',
+        title: 'Support the Institute',
+        linkText: 'Make a Gift',
+        linkHref: '#',
+      } %}
+
+      <ul class="social-links">
+        {% for item in social_links %}
+          <li class="social-links__item">
+            <a href="{{item.href}}" class="social-links__link">
+              <i class="icon icon--{{item.slug}}">{{item.text}}</i>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+
+    <div class="site-footer__menus">
+      {% for menu in footer_nav %}
+        {% include 'partials/footer-menu.twig' with menu %}
+      {% endfor %}
+    </div>
+  </div>
+
+  <div class="secondary-footer">
+    <div class="container">
+      <div class="secondary-footer__brand">
+        <!-- TODO: use picture? -->
+        <img src="img/midd-logo.png" alt="Middlebury">
+      </div>
+      <nav class="secondary-footer__nav">
+        <ul class="secondary-footer__list">
+          {% for item in secondary_footer_nav %}
+          <li class="secondary-footer__item"><a href="{{item.href}}" class="secondary-footer__link">{{item.text}}</a></li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
+  </div>
+
+  <a href="#top" class="to-top-link button button--primary">
+    <i class="icon icon--chevron-up">Back to top</i>
+  </a>
+
 </footer>
