--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/css/main.css">
-  <script src="js/bundle.js"></script>
 </head>
 <body>
   {% include 'partials/header.twig' %}
@@ -13,5 +12,6 @@
     {% block page %}{% endblock %}
   </section>
   {% include 'partials/footer.twig' %}
+  <script src="js/bundle.js" async></script>
 </body>
 </html>
