--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ title }}</title>
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7327752/css/fonts.css">
 </head>
 <body>
   {% include 'partials/header.twig' %}
