--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -8,6 +8,9 @@
   <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/83898/7327752/css/fonts.css">
 </head>
 <body>
+  <div id="skip-link">
+    <a href="#main" class="element-invisible element-focusable">Skip to content</a>
+  </div>
   {% include 'partials/header.twig' %}
   <section>
     {% block page %}{% endblock %}
