wrap content with `main`

--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -12,9 +12,9 @@
     <a href="#main" class="element-invisible element-focusable">Skip to content</a>
   </div>
   {% include 'partials/header.twig' %}
-  <section>
+  <main class="main" id="main">
     {% block page %}{% endblock %}
-  </section>
+  </main>
   {% include 'partials/footer.twig' %}
   <script src="js/bundle.js" async></script>
 </body>
