--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,3 +22,17 @@
 @import 'site-footer';
 @import 'site-nav';
 
+.element-invisible {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px,1px,1px,1px);
+  overflow: hidden;
+  height: 1px;
+
+  &.element-focusable:focus {
+    position: static !important;
+    clip: auto;
+    overflow: visible;
+    height: auto;
+  }
+}
