--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,6 +25,11 @@ $gray-light: #dedede;
 $font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', verdana, sans-serif;
 $font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
 
+$font-weight-light: 300;
+$font-weight-book: 400;
+$font-weight-medium: 500;
+$font-weight-semibold: 600;
+$font-weight-bold: 700;
 $base-font-size: 16px;
 $base-text-color: $black;
 $base-line-height: 1.5;
