change section nav element to div

--- a/src/templates/partials/section.twig
+++ b/src/templates/partials/section.twig
@@ -1,9 +1,9 @@
 <section class="section">
   <header class="section__header">
     <h1 class="section__title">{{title}}</h1>
-    <nav class="section__nav">
-      <a href="{{moreLinkHref}}">{{moreLinkText}}</a>
-    </nav>
   </header>
+      <div class="section__nav">
+        <a href="{{moreLinkHref}}" class="section__nav-link">{{moreLinkText}}</a>
+      </div>
   {% block content %}{% endblock %}
 </section>
