add styleguide colors

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,15 @@ $brand-secondary: #97bbd5;
 $brand-secondary-dark: #174872;
 $brand-tertiary: #0ac3a6;
 
+// from styleguide
+$middlebury-blue: #0d395f;
+$light-blue: #97bbd5;
+$bright-green: #0ac3a6;
+$dark-green:  #058371;
+$teal: #017c9f;
+$warm-gray: #e5e4e2;
+$line-gray: #dedede;
+$text-gray: #767676;
 $white: #fff;
 $black: #202020;
 $gray: #767676;
