--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -31,7 +31,8 @@ $black: #202020;
 $gray: #767676;
 $gray-light: #dedede;
 
-$font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', verdana, sans-serif;
+$font-family-sans-serif: 'whitney ssm a', 'whitney ssm b', Tahoma, Geneva, sans-serif;
+$font-family-sans-serif-condensed: 'whitney condensed', $font-family-sans-serif;
 $font-family-serif: 'sentinel ssm a', 'sentinel ssm b', georgia, serif;
 
 $font-weight-light: 300;
