--- a/src/templates/partials/footer-menu.twig
+++ b/src/templates/partials/footer-menu.twig
@@ -1,10 +1,10 @@
-<section class="footer-menu">
+<div class="footer-menu">
   <h3 class="footer-menu__title">{{title}}</h3>
-  <nav class="footer-menu__nav">
+  <div class="footer-menu__nav">
     <ul class="footer-menu__list">
       {% for item in items %}
         <li class="footer-menu__item"><a href="{{item.href}}" class="footer-menu__link">{{item.text}}</a></li>
       {% endfor %}
     </ul>
-  </nav>
-</section>
+  </div>
+</div>
