--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -44,7 +44,88 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: $font-family-serif;
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
+h1,
+.h1 {
+  font-size: rem(20);
+  line-height: rem(24);
+  font-family: $font-family-sans-serif;
+
+  @include media(md) {
+    font-size: rem(30);
+    line-height: rem(38);
+  }
+}
+
+// alt page title
+.pagetitle {
+  font-size: rem(28);
+  line-height: rem(36);
+  font-family: $font-family-sans-serif;
+
+  @include media(md) {
+    font-size: rem(40);
+    line-height: rem(48);
+  }
+}
+
+h2,
+.h2 {
+  font-size: rem(22);
+  line-height: rem(26);
+  font-family: $font-family-serif;
+
+  @include media(md) {
+    font-size: rem(26);
+    line-height: rem(30);
+  }
+}
+
+h3,
+.h3 {
+  font-size: rem(18);
+  line-height: rem(22);
+  font-weight: $font-weight-book;
+  font-family: $font-family-serif;
+
+  @include media(md) {
+    font-size: rem(26);
+    line-height: rem(30);
+  }
+}
+
+.subhead {
+  font-weight: $font-weight-book;
+  font-family: $font-family-serif;
+  font-size: rem(16);
+  line-height: rem(22);
+
+  @include media(md) {
+    font-size: rem(20);
+    line-height: rem(28);
+  }
+}
+
+// should this be h5 and subhead is h4?
+h4,
+.h4 {
+  font-family: $font-family-serif;
+  font-size: rem(16);
+  font-weight: $font-weight-book;
+  line-height: rem(20);
+
+  @include media(md) {
+    font-size: rem(18);
+    line-height: rem(22);
+  }
+}
