set body styles based on styleguide

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -10,8 +10,8 @@ body {
   font-family: $base-font-family;
   line-height: $base-line-height;
   font-size: $base-font-size;
-  color: $base-text-color;
-  background-color: $white;
+  color: $black;
+  background-color: $warm-gray;
 }
 a {
   color: $brand-primary;
