--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,14 @@
 @import 'site-footer';
 @import 'site-nav';
 
+.site-container {
+  background-color: $white;
+  width: 100%;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .element-invisible {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
