--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,9 +12,12 @@
 // components
 @import 'button';
 @import 'icon';
+@import 'section';
 @import 'action-callout';
 @import 'footer-menu';
 @import 'site-search';
+@import 'site-menu-button';
+@import 'social-links';
 
 // layout
 @import 'grid';
