wrap with site-container

--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -11,11 +11,13 @@
   <div id="skip-link">
     <a href="#main" class="element-invisible element-focusable">Skip to content</a>
   </div>
-  {% include 'partials/header.twig' %}
-  <main class="main" id="main">
-    {% block page %}{% endblock %}
-  </main>
-  {% include 'partials/footer.twig' %}
+  <div class="site-container">
+    {% include 'partials/header.twig' %}
+    <main class="main" id="main">
+      {% block page %}{% endblock %}
+    </main>
+    {% include 'partials/footer.twig' %}
+  </div>
   <script src="js/bundle.js" async></script>
 </body>
 </html>
