use screen and for media queries

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -16,7 +16,7 @@
 
 @mixin media($breakpoint) {
   @if map-has-key($breakpoints, $breakpoint) {
-    @media (min-width: #{map-get($breakpoints, $breakpoint)}) {
+    @media screen and (min-width: #{map-get($breakpoints, $breakpoint)}) {
       @content;
     }
   }
