--- a/src/templates/partials/nav.twig
+++ b/src/templates/partials/nav.twig
@@ -1,24 +1,37 @@
-<nav class="site-nav">
-  <ul class="site-nav__list">
+<nav class="site-nav" data-nav>
+  <ul class="site-nav__list" data-nav-list>
     {% for item in site_nav %}
       <li class="site-nav__item">
-        <a href="#" class="site-nav__link">{{item.text}}</a>
+        <a href="{{item.href}}" class="site-nav__link" data-nav-link>{{item.text}}</a>
 
-        <nav class="site-subnav">
+        {% if item.items %}
+          <div class="site-subnav" data-nav>
+            <a href="#" class="site-subnav__back-link" data-nav-back>{{item.text}}</a>
+            <ul class="site-subnav__list" data-nav-list>
+              {% for subitem in item.items %}
+                <li class="site-subnav__item">
+                  <a href="{{subitem.href}}" class="site-subnav__link" data-nav-link>{{subitem.text}}</a>
+                  {% if subitem.items %}
+                    <div class="site-subnav" data-nav>
+                      <a href="#" class="site-subnav__back-link" data-nav-back>{{subitem.text}}</a>
+                      <ul class="site-subnav__list">
+                        {% for subitem in subitem.items %}
+                        <li class="site-subnav__item">
+                          <a href="{{subitem.href}}" class="site-subnav__link" data-nav-link>{{subitem.text}}</a>
+                        </li>
+                        {% endfor %}
+                      </ul>
+                    </div>
+                  {% endif %}
+                </li>
+              {% endfor %}
+            </ul>
 
-          <ul class="site-subnav__list">
-            {% for subitem in item.items %}
-              <li class="site-subnav__item">
-                <a href="{{subitem.href}}" class="site-subnav__link">{{subitem.text}}</a>
-              </li>
-            {% endfor %}
-          </ul>
-
-          {% if item.button %}
-            <a href="{{item.button.href}}" class="button button--secondary site-subnav__button">{{item.button.text}}</a>
-          {% endif %}
-
-        </nav>
+            {% if item.button %}
+              <a href="{{item.button.href}}" class="button button--secondary site-subnav__button">{{item.button.text}}</a>
+            {% endif %}
+          </div>
+        {% endif %}
       </li>
     {% endfor %}
   </ul>
