--- a/src/scss/_site-search.scss
+++ b/src/scss/_site-search.scss
@@ -7,11 +7,13 @@
 }
 
 .site-search__field {
+  font-family: $font-family-sans-serif;
   appearance: none;
   background-color: transparent;
   border: 0;
   color: $white;
-  padding: 20px;
+  padding: 20px 30px;
+  font-size: 15px; // We should use 16 since it does not cause a zoom effect when zoomed
   width: 100%;
 
   &::placeholder  {
@@ -23,7 +25,7 @@
   background-color: transparent;
   border: 0;
   color: $white;
-  padding: 20px;
+  padding: 20px 30px;
 }
 
 .input-group {
