--- a/src/scss/_icon.scss
+++ b/src/scss/_icon.scss
@@ -2,6 +2,37 @@
   display: inline-block;
 }
 
+.icon--search {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  text-indent: -9999px;
+
+  &:before,
+  &:after {
+    display: block;
+    content: '';
+    position: absolute;
+  }
+
+  &:before {
+    top: 0;
+    left: 0;
+    border-radius: 7px;
+    height: 14px;
+    width: 14px;
+    border: 2px solid $white;
+  }
+
+  &:after {
+    width: 5px;
+    bottom: 1px;
+    right: 1px;
+    border-bottom: 2px solid $white;
+    transform: rotate(45deg);
+  }
+}
+
 $hamburger-bar-height: 2px;
 $hamburger-spacing: 4px;
 $hamburger-bar-offset:  $hamburger-bar-height + $hamburger-spacing;
