use button component for search

--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -30,7 +30,7 @@
               <input type="search" placeholder="Search the Institute" class="site-search__field" id="site-search">
             </div>
             <div class="input-group__button">
-              <button type="submit" class="site-search__button"><i class="icon icon--search">Search</i></button>
+              <button type="submit" class="button site-search__button"><i class="icon icon--search">Search</i></button>
             </div>
           </div>
         </form>
