--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -12,8 +12,9 @@
     </div>
 
     <div class="site-header__menu-button">
-      <a href="#site-nav" class="site-menu-button" data-toggle-target=".site-header__nav">
-        <span class="site-menu-button__text">Menu</span>
+      <a href="#site-nav" class="site-menu-button" data-toggle-target=".site-header__secondary">
+        <span class="site-menu-button__text site-menu-button__text--open">Menu</span>
+        <span class="site-menu-button__text site-menu-button__text--close">Close</span>
         <i class="site-menu-button__icon icon icon--hamburger"></i>
       </a>
     </div>
