--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -20,8 +20,7 @@
     </div>
   </div>
 
-  <div class="site-header__nav">
-
+  <div class="site-header__secondary">
     <div class="site-header__search">
       <div class="site-search">
         <form>
@@ -38,6 +37,8 @@
       </div>
     </div>
 
-    {% include 'partials/nav.twig' %}
+    <div class="site-header__nav">
+      {% include 'partials/nav.twig' %}
+    </div>
   </div>
 </header>
