reorder picture sources so they work

--- a/src/templates/partials/header.twig
+++ b/src/templates/partials/header.twig
@@ -4,9 +4,9 @@
       <a href="/" class="site-header__home-link">
         <!--  TODO: can we even use picture here or need an h1 with image replacement? -->
         <picture>
-          <source srcset="img/miis-logo-left.png" media="(min-width: 0px)">
           <source srcset="img/miis-logo.png" media="(min-width: 960px)">
-          <img src="img/miis-logo.png" alt="{{site_title}}">
+          <source srcset="img/miis-logo-left.png">
+          <img src="img/miis-logo-left.png" alt="{{site_title}}">
         </picture>
       </a>
     </div>
