--- a/src/scss/_site-nav.scss
+++ b/src/scss/_site-nav.scss
@@ -1,5 +1,15 @@
 .site-nav {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
 
+.site-nav__body {
+  flex: 1;
+}
+
+.site-nav__footer {
+  flex: 0 1 auto;
 }
 
 .site-nav--sub {
@@ -10,11 +20,20 @@
   width: 100%;
   background-color: $middlebury-blue;
   height: 100vh;
-  transform: translateX(100%);
-  transition: transform .2s;
+  // transform: translateX(100%);
+  transition: .2s;
+
+  @include media(md) {
+    // opacity: 0;
+    // display: block;
+    height: 100%;
+    padding-top: 214px; // TODO: find a solution w/o a magic number
+    left: 100%;
+    // transform: translateX(-100%);
+  }
 
   &.is-active {
-    transform: translateX(0);
+    // transform: translateX(0);
     display: block;
     z-index: 5;
   }
@@ -25,12 +44,35 @@
 }
 
 .site-nav__item {
+  @include media(md) {
+    padding-left: 70px;
+    padding-right: 70px;
+  }
+
+  &:hover {
+    @include media(md) {
+      & > .site-nav {
+        display: flex;
+        // left: 100%;
+        // opacity: 1;
+        // transform: translateX(0);
+      }
+    }
+  }
+
   &:not(:first-child) {
     border-top: 1px solid $brand-secondary-dark;
+
+    @include media(md) {
+      border-top: 0;
+    }
   }
 
   .site-nav--sub & {
     border-top: 1px solid $brand-secondary-dark;
+    @include media(md) {
+      border-top: 0;
+    }
   }
 }
 
@@ -40,6 +82,16 @@
   color: $white;
   position: relative;
   padding: 20px 30px;
+
+  &:hover {
+    color: $bright-green;
+    text-decoration: none;
+  }
+
+  @include media(md) {
+    padding: 5px 0;
+    font-size: 14px;
+  }
 
   &:after {
     display: block;
@@ -53,10 +105,18 @@
     border-top-width: 0;
     border-left-width: 0;
     transform: rotate(-45deg) translateY(-50%);
+
+    @include media(md) {
+      display: none;
+    }
   }
 
   .site-nav--sub & {
     padding-left: 70px;
+
+    @include media(md) {
+      padding-left: 0;
+    }
   }
 }
 
@@ -68,6 +128,10 @@
     left: 35px;
     border-color: $bright-green;
     border-width: 2px 0 0 2px;
+  }
+
+  @include media(md) {
+    display: none;
   }
 }
 
@@ -81,4 +145,10 @@
 
 .site-nav__button {
   display: none;
+
+  @include media(md) {
+    display: block;
+    padding-left: 70px;
+    padding-right: 70px;
+  }
 }
