--- a/src/templates/partials/nav.twig
+++ b/src/templates/partials/nav.twig
@@ -6,30 +6,39 @@
 
         {% if item.items %}
           <div class="site-nav site-nav--sub" data-nav>
-            <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{item.text}}</a>
-            <ul class="site-nav__list" data-nav-list>
-              {% for subitem in item.items %}
-                <li class="site-nav__item">
-                  <a href="{{subitem.href}}" class="site-nav__link" data-nav-link>{{subitem.text}}</a>
-                  {% if subitem.items %}
-                    <div class="site-nav site-nav--sub" data-nav>
-                      <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{subitem.text}}</a>
-                      <ul class="site-nav__list">
-                        {% for subitem in subitem.items %}
-                        <li class="site-nav__item">
-                          <a href="{{subitem.href}}" class="site-nav__link" data-nav-link>{{subitem.text}}</a>
-                        </li>
-                        {% endfor %}
-                      </ul>
-                    </div>
-                  {% endif %}
-                </li>
-              {% endfor %}
-            </ul>
+            <div class="site-nav__header">
+              <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{item.text}}</a>
+            </div>
+            <div class="site-nav__body">
+              <ul class="site-nav__list" data-nav-list>
+                {% for subitem in item.items %}
+                  <li class="site-nav__item">
+                    <a href="{{subitem.href}}" class="site-nav__link" data-nav-link>{{subitem.text}}</a>
+                    {% if subitem.items %}
+                      <div class="site-nav site-nav--sub" data-nav>
+                        <a href="#" class="site-nav__link site-nav__link--back" data-nav-back>{{subitem.text}}</a>
+                        <ul class="site-nav__list">
+                          {% for subitem in subitem.items %}
+                          <li class="site-nav__item">
+                            <a href="{{subitem.href}}" class="site-nav__link" data-nav-link>{{subitem.text}}</a>
+                          </li>
+                          {% endfor %}
+                        </ul>
+                      </div>
+                    {% endif %}
+                  </li>
+                {% endfor %}
+              </ul>
+            </div>
 
-            {% if item.button %}
-              <a href="{{item.button.href}}" class="button button--secondary site-nav__button">{{item.button.text}}</a>
-            {% endif %}
+            <div class="site-nav__footer">
+              {% if item.button %}
+                <div class="site-nav__button">
+                  <a href="{{item.button.href}}" class="button button--secondary ">{{item.button.text}}</a>
+                </div>
+              {% endif %}
+            </div>
+
           </div>
         {% endif %}
       </li>
