import pagehero partial

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 // components
 @import 'button';
 @import 'icon';
+@import 'pagehero';
 @import 'section';
 @import 'action-callout';
 @import 'footer-menu';
