move input group to main

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,3 +48,14 @@
     height: auto;
   }
 }
+.input-group {
+  display: flex;
+
+  &__field {
+    flex: 1;
+  }
+
+  &__button {
+    flex: 0 1 auto;
+  }
+}
