--- a/src/scss/_site-nav.scss
+++ b/src/scss/_site-nav.scss
@@ -1,11 +1,27 @@
 .site-nav {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
+  // height: 100%;
+
+  @include media(md) {
+  }
 }
 
 .site-nav__body {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+
+  @include media(md) {
+    border-left: 1px solid $brand-secondary-dark;
+  }
+}
+
+.site-nav__main {
   flex: 1;
+
+  @include media(md) {
+    display: flex;
+  }
 }
 
 .site-nav__footer {
@@ -19,17 +35,12 @@
   left: 0;
   width: 100%;
   background-color: $middlebury-blue;
-  height: 100vh;
-  // transform: translateX(100%);
-  transition: .2s;
+  height: 100%;
 
   @include media(md) {
-    // opacity: 0;
-    // display: block;
     height: 100%;
-    padding-top: 214px; // TODO: find a solution w/o a magic number
+    padding-bottom: 50px;
     left: 100%;
-    // transform: translateX(-100%);
   }
 
   &.is-active {
@@ -39,8 +50,34 @@
   }
 }
 
-.site-nav__list {
+.site-nav--secondary {
+  @include media(md) {
+    padding-top: 214px; // TODO: find a solution w/o a magic number
+  }
+}
 
+.site-nav--tertiary {
+  @include media(md) {
+    padding-top: 70px;
+  }
+}
+
+.site-nav__col {
+  @include media(md) {
+    flex: 1;
+  }
+}
+
+.site-nav__items-heading {
+  text-transform: uppercase;
+  color: $light-blue;
+  font-weight: $font-weight-bold;
+  font-size: 12px;
+  display: block;
+}
+
+.site-nav__list {
+  width: 100%;
 }
 
 .site-nav__item {
@@ -53,9 +90,6 @@
     @include media(md) {
       & > .site-nav {
         display: flex;
-        // left: 100%;
-        // opacity: 1;
-        // transform: translateX(0);
       }
     }
   }
@@ -72,6 +106,8 @@
     border-top: 1px solid $brand-secondary-dark;
     @include media(md) {
       border-top: 0;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 }
@@ -93,6 +129,10 @@
     font-size: 14px;
   }
 
+  .site-nav__item:hover > & {
+    color: $bright-green;
+  }
+
   &:after {
     display: block;
     content: '';
@@ -108,6 +148,15 @@
 
     @include media(md) {
       display: none;
+      right: 0;
+      height: 5px;
+      width: 5px;
+      // border-width: 1px;
+      border-color: $bright-green;
+
+      .site-nav__item:hover > & {
+        display: block;
+      }
     }
   }
 
@@ -115,7 +164,7 @@
     padding-left: 70px;
 
     @include media(md) {
-      padding-left: 0;
+      // padding-left: 0;
     }
   }
 }
@@ -148,7 +197,7 @@
 
   @include media(md) {
     display: block;
-    padding-left: 70px;
-    padding-right: 70px;
+    // padding-left: 70px;
+    // padding-right: 70px;
   }
 }
