--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -13,6 +13,11 @@ body {
   color: $black;
   background-color: $warm-gray;
 }
+
+figure {
+  margin: 0;
+}
+
 a {
   color: $brand-primary;
   text-decoration: none;
