add small button modifier

--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -15,6 +15,10 @@
   }
 }
 
+.button--sm {
+  font-size: 14px;
+}
+
 .button--primary {
   background-color: $brand-tertiary;
   color: $brand-primary;
