--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   word-wrap: nowrap;
   padding: 1em 2em;
+  font-family: $font-family-sans-serif;
   font-size: 16px;
   border-radius: 0;
   border: 0;
