--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,8 +1,8 @@
 .button {
   display: inline-block;
   word-wrap: nowrap;
-  padding: 1em 2em;
   font-family: $font-family-sans-serif;
+  padding: 13px 20px;
   font-size: 16px;
   border-radius: 0;
   border: 0;
