--- a/src/scss/_button.scss
+++ b/src/scss/_button.scss
@@ -1,7 +1,7 @@
 .button {
   display: inline-block;
-  word-wrap: nowrap;
   font-family: $font-family-sans-serif;
+  white-space: nowrap;
   padding: 13px 20px;
   font-size: 16px;
   border-radius: 0;
