start creating modal component

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'button';
 @import 'icon';
 @import 'pagehero';
+@import 'modal';
 @import 'mission-selector';
 @import 'section';
 @import 'action-callout';
