start creating mission modal

--- a/src/templates/layout.twig
+++ b/src/templates/layout.twig
@@ -18,6 +18,7 @@
     </main>
     {% include 'partials/footer.twig' %}
   </div>
+  {% include 'partials/mission-modal.twig' %}
   <script src="js/bundle.js" async></script>
 </body>
 </html>
