fix home page content so 4 cols turn into 2x2 layout on medium

--- a/src/templates/home.twig
+++ b/src/templates/home.twig
@@ -14,15 +14,15 @@
 
     <section class="section">
       <div class="row row--lined">
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <h3><a href="#">Practical Innovation</a></h3>
           <p>The world needs people who can understand our greatest challenges, from poverty to climate change, and the connections between them.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           <h3><a href="">Cultural Fluency</a></h3>
           <p>Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           {% include 'partials/action-callout.twig' with {
             preheader: 'Register for',
             title: 'Monterey Forum',
@@ -31,7 +31,7 @@
             linkHref: '#',
           } %}
         </div>
-        <div class="col-md-3">
+        <div class="col-md-6 col-lg-3">
           {% include 'partials/action-callout.twig' with {
             preheader: 'Application for',
             title: 'Spring 2017 Now Open',
