--- a/src/scss/_callout.scss
+++ b/src/scss/_callout.scss
@@ -1,12 +1,14 @@
-.action-callout {
+.callout {
   text-align: center;
+  display: flex;
+  flex-direction: column;
 
   @include media(md) {
     text-align: left;
   }
 }
 
-.action-callout__preheader {
+.callout__preheader {
   display: block;
   font-family: $font-family-serif;
   font-style: italic;
@@ -14,18 +16,18 @@
   font-weight: 300;
 }
 
-.action-callout__title {
+.callout__title {
   font-size: 40px;
   font-weight: $font-weight-book;
   line-height: 1.3;
   margin-top: 0;
 }
 
-.action-callout__subtitle {
+.callout__subtitle {
   margin-top: 0;
   margin-bottom: 20px;
 }
 
-.action-callout__button {
+.callout__button {
 
 }
