--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,7 +16,7 @@
 @import 'modal';
 @import 'mission-selector';
 @import 'section';
-@import 'action-callout';
+@import 'callout';
 @import 'footer-menu';
 @import 'site-search';
 @import 'site-menu-button';
