--- a/src/templates/home.twig
+++ b/src/templates/home.twig
@@ -23,7 +23,7 @@
           <p>Learning in language and intercultural studies are integral to an Institute education. These skills are central to achieving effective change around the world.</p>
         </div>
         <div class="col-md-6 col-lg-3">
-          {% include 'partials/action-callout.twig' with {
+          {% include 'partials/callout.twig' with {
             preheader: 'Register for',
             title: 'Monterey Forum',
             subtext: 'March 28-29, 2017',
@@ -32,7 +32,7 @@
           } %}
         </div>
         <div class="col-md-6 col-lg-3">
-          {% include 'partials/action-callout.twig' with {
+          {% include 'partials/callout.twig' with {
             preheader: 'Application for',
             title: 'Spring 2017 Now Open',
             linkText: 'Apply Now',
