--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -16,7 +16,7 @@
             {% for item in social_links %}
               <li class="social-links__item">
                 <a href="{{item.href}}" class="social-links__link">
-                  <i class="icon icon--{{item.slug}}">{{item.text}}</i>
+                  <i class="icon icon--social icon--{{item.slug}}">{{item.text}}</i>
                 </a>
               </li>
             {% endfor %}
