--- a/src/templates/partials/footer.twig
+++ b/src/templates/partials/footer.twig
@@ -4,7 +4,7 @@
       <div class="col-lg-3">
 
         <div class="site-footer__content">
-          {% include 'partials/action-callout.twig' with {
+          {% include 'partials/callout.twig' with {
             preheader: 'Help us help the world',
             title: 'Support the Institute',
             linkText: 'Make a Gift',
