remove data full screen select data attributes

--- a/src/templates/partials/mission-selector.twig
+++ b/src/templates/partials/mission-selector.twig
@@ -1,5 +1,5 @@
 <div class="mission-selector{% if overlap %} mission-selector--overlap{% endif %}">
-  <form action="" class="mission-selector__form" data-fullscreen-select data-fs-select-prefix="I want to">
+  <form action="" class="mission-selector__form">
     <div class="mission-selector__form-group">
       <label class="mission-selector__label">What&rsquo;s Your Mission?</label>
       <select name="mission" class="mission-selector__select" data-toggle-target="#mission-modal">
