--- a/src/templates/partials/callout.twig
+++ b/src/templates/partials/callout.twig
@@ -1,12 +1,20 @@
 <div class="callout">
-  {% if preheader %}
-    <span class="callout__preheader">{{preheader}}</span>
-  {% endif %}
+  <div class="callout__header">
+    {% if preheader %}
+      <span class="callout__preheader">{{preheader}}</span>
+    {% endif %}
   <h3 class="callout__title">{{title}}</h3>
-  {% if subtext %}
-    <p class="callout__subtext">{{subtext}}</p>
-  {% endif %}
-  {% if linkHref and linkText %}
-    <a href="{{linkHref}}" class="button button--{{buttonModifier | default('primary')}} callout__button">{{linkText}}</a>
-  {% endif %}
+  </div>
+  <div class="callout__body">
+    {% if subtext %}
+      <p class="callout__subtext">{{subtext}}</p>
+    {% endif %}
+    {% block body %}{% endblock %}
+  </div>
+  <div class="callout__footer">
+    {% if linkHref and linkText %}
+      <a href="{{linkHref}}" class="button button--{{buttonModifier | default('primary')}} callout__button">{{linkText}}</a>
+    {% endif %}
+    {% block footer %}{% endblock %}
+  </div>
 </div>
